# meta_server

./: .gitignore  Cargo.toml  README.md  build.rs  meta.toml  prompt
conf/: node1.toml  node2.toml  node3.toml
proto/: meta.proto  wal_meta.proto
scripts/: start-three-node.sh
src/: command.rs  config.rs  http_gateway.rs  lib.rs  main.rs  meta_service.rs  model.rs  network.rs  raft_node.rs  reconciler.rs  scheduler.rs  snapshot_store.rs  state_machine.rs  storage.rs
static/: observability.html
tests/: meta_server.rs
