[package]
name = "meta_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
parking_lot = "0.12"
prost = "0.13"
protobuf = "2"
raft = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[build-dependencies]
tonic-build = "0.12"
protobuf-src = "1.1"

[dev-dependencies]
tempfile = "3"
